# adk-generator-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.roo/: mcp.json
adk_mcp_server/: __main__.py  main.py  settings.py
adk_mcp_server/services/: rag_service.py
adk_mcp_server/tools/: adk_generator.py
docs/: adk_examples.md
scripts/: seed_opensearch.py
